--- a/src/app/healing-calculator/healing-calculator.component.scss
+++ b/src/app/healing-calculator/healing-calculator.component.scss
@@ -50,15 +50,16 @@
 
     .insertions {
         display: grid;
+        // justify-items: center;
         grid-template-columns: repeat(3, 1fr);
         margin: 40px 0 0 0;
 
         .units {
             display: flex;
             flex-direction: column;
-            gap: 40px;
+            justify-content: space-between;
 
-            .all-units, .all-matrices {
+            .all-units, .all-matrices, .all-relics, .all-traits {
                 position: absolute;
                 border-radius: 10px;
                 display: flex;
@@ -129,7 +130,7 @@
             .unit {
                 display: flex;
                 align-items: center;
-                gap: 25px;
+                gap: 15px;
     
                 .simulacra, .matrices {
                     display: flex;
@@ -162,10 +163,9 @@
                     .simulacra-select {
                         align-self: center;
                         cursor: pointer;
-                        width: 150px;
 
                         img {
-                            width: 100%;
+                            width: 150px;
                             height: 100%;
                         }
                     }
@@ -185,10 +185,9 @@
                             .matrix-select {
                                 align-self: center;
                                 cursor: pointer;
-                                width: 75px;
 
                                 img {
-                                    width: 100%;
+                                    width: 75px;
                                     height: 100%;
                                 }
                             }
@@ -198,15 +197,7 @@
             }
         }
 
-        .gear-stats {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-
-            .subtitle {
-                font-size: 24px;
-            }
-
+        .extras, .gear-stats {
             .stat {
                 display: flex;
                 align-items: center;
@@ -238,6 +229,104 @@
                         border: 2px solid gold;
                     }
                 }
+            }
+        }
+
+        .extras {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+
+            .entry {
+                display: flex;
+                align-items: center;
+                gap: 25px;
+
+                .trait, .titan-stats, .relics {
+                    .subtitle {
+                        font-size: 24px;
+                    }
+                }
+
+                .trait {
+                    display: flex;
+                    flex-direction: column;
+                    gap: 10px;
+
+
+                    .trait-select {
+                        display: flex;
+                        align-self: center;
+                        align-items: center;
+                        gap: 15px;
+                        cursor: pointer;
+
+                        img {
+                            width: 150px;
+                            height: 100%;
+                        }
+                    }
+                }
+
+                .titan-stats {
+                    display: flex;
+                    flex-direction: column;
+                    gap: 10px;
+                }
+
+                .relics {
+                    display: flex;
+                    flex-direction: column;
+                    gap: 10px;
+
+                    .relic-wrapper {
+                        display: flex;
+                        align-items: center;
+                        gap: 15px;
+
+                        .relic-select-container {
+                            display: flex;
+                            flex-direction: column;
+                            gap: 10px;
+
+                            .relic-select {
+                                align-self: center;
+                                cursor: pointer;
+    
+                                img {
+                                    width: 150px;
+                                    height: 100%;
+                                }
+                            }
+
+                            .stars {
+                                align-self: center;
+                                cursor: pointer;
+        
+                                .active {
+                                    path {
+                                        fill: $white;
+                                    }
+                                }
+        
+                                svg, img {
+                                    width: 20px;
+                                    height: 20px;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
+        .gear-stats {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+
+            .subtitle {
+                font-size: 24px;
             }
         }
     }
