--- a/src/app/about-us-card/about-us-card.component.html
+++ b/src/app/about-us-card/about-us-card.component.html
@@ -2,7 +2,7 @@
 <div class="about" [style]="getBackgroundStyle()">
   <div class="wrapper">
     <div class="avatar">
-      <img src="assets/contributors/{{card.avatar}}.png" [alt]="card.name" class="image">
+      <img src="assets/contributors/{{card.avatar}}.webp" [alt]="card.name" class="image">
       <svg width="130" height="142" viewBox="0 0 130 142" fill="none" xmlns="http://www.w3.org/2000/svg"
         class="custom-border">
         <path
@@ -24,7 +24,7 @@
       <h6 class="title">{{card.title}}</h6>
     </div>
   </div>
-  <p class="quote">"{{card.quote}}"</p>
+  <p class="quote">{{card.quote}}</p>
   <div class="socials">
     <a *ngFor="let link of card.links" [href]="link.url" target="_blank" class="social-link">
       <img src="assets/socials/{{link.icon}}.svg" [alt]="link.alt" class="icon">
