--- a/src/app/about-us/about-us.component.scss
+++ b/src/app/about-us/about-us.component.scss
@@ -54,6 +54,11 @@
         grid-template-columns: repeat(3, 1fr);
         gap: 30px;
         margin: 40px 0 0 0;
+
+        app-about-us-card {
+            width: 100%;
+       
+        }
     }
 }
 
