--- a/src/app/about-us-card/about-us-card.component.scss
+++ b/src/app/about-us-card/about-us-card.component.scss
@@ -8,6 +8,7 @@
     gap: 12px;
     border-radius: 10px;
     border: 2px solid transparent;
+    height: 100%;
 
     .wrapper {
         display: flex;
