--- a/src/app/relic-card/relic-card.component.html
+++ b/src/app/relic-card/relic-card.component.html
@@ -1,4 +1,4 @@
-<div class="unit-wrapper" [attr.data-unit]="relic.slug" [routerLink]="'/relic-page/' + relic.slug">
+<div class="relic-wrapper" [attr.data-unit]="relic.slug" [routerLink]="'/relic-page/' + relic.slug">
     <div class="top-card" style="background-image: url(&quot;../../assets/backgrounds/hexagons.png&quot;);">
       <div class="content-wrapper" style="background-image: url(&quot;../assets/relics/{{relic.slug}}_relic.webp&quot;);">
         <div class="{{relic.tag}}-tag">{{relic.tag}}</div>
@@ -6,8 +6,8 @@
           <h5 class="name">{{relic.name}}</h5>
           <div class="type-and-buffs">
             <div class="icons">
-              <img *ngFor="let role of relic.roles" [src]="'assets/effects/buff_' + role.toLowerCase() + '.png'"
-                [alt]="role">
+              <img *ngFor="let role of relic.roles" [src]="'assets/effects/buff_' + role.toLowerCase() + '.png'" [alt]="role">
+              <img [src]="'assets/elements/element_' + relic.elementBoost.replace('boost', '').replace('resistance', '') + '.png'" [alt]="relic.elementBoost">
             </div>
             <div class="buffs" [class]="getRarityClass()">
               {{relic.rarity.toUpperCase()}}
