Fix "numberical" typo

--- a/src/app/healing/healing.component.html
+++ b/src/app/healing/healing.component.html
@@ -30,7 +30,7 @@
         <img class="card-img-top" src="assets/backgrounds/overview_background3.webp" alt="Card image top">
         <div class="card-body">
           <h5 class="card-title">Calculator</h5>
-          <p class="card-text">A calculator that allows you to figure out the amount of healing, shielding, and other utility a character can provide based on their stats, equipment, and other factors. Not limited to just numberical results, the calculator also points out other strengths and niches.</p>
+          <p class="card-text">A calculator that allows you to figure out the amount of healing, shielding, and other utility a character can provide based on their stats, equipment, and other factors. Not limited to just numerical results, the calculator also points out other strengths and niches.</p>
         </div>
       </div>
     </div>
