Added Simulacra roles

--- a/src/app/unit-page/unit-page.component.html
+++ b/src/app/unit-page/unit-page.component.html
@@ -60,7 +60,7 @@
       </div>
       <div class="unit-roles">
         <div class="stats-title">Roles</div>
-        <div class="top-stats">
+        <div class="roles-grid">
           <div *ngFor="let roles of unit.roles" class="roles">
             <img src="assets/effects/buff_{{roles.toLowerCase()}}.png">
             <span>{{roles}}</span>
