Add glossary intro, compress certain styles into one, rehaul entire data fetching architecture

--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,5 +1,5 @@
 <section class="main">
-  <div class="intro">
+  <div class="page-intro">
     <div class="titles">
       <h3 class="title">Arcana Sanctuary</h3>
       <h4 class="subtitle">Project Team</h4>
