--- a/src/app/healing-calculator/healing-calculator.component.html
+++ b/src/app/healing-calculator/healing-calculator.component.html
@@ -13,7 +13,7 @@
 </ng-template>
 
 <section class="main">
-  <div class="intro">
+  <div class="page-intro">
     <div class="titles">
       <h3 class="title">Healing - Calculator</h3>
       <h4 class="subtitle">Lorem ipsum</h4>
