--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -36,7 +36,7 @@
     </div>
   </div>
 </section>
-<section class="main">
+<section class="main-home">
   <div class="inner">
     <div class="half visual">
       <div class="wrapper" id="book">
@@ -75,7 +75,7 @@
     </div>
   </div>
 </section>
-<section class="main">
+<section class="main-home">
   <div class="inner">
     <div class="half text">
       <div class="wrapper">
@@ -110,7 +110,7 @@
     </div>
   </div>
 </section>
-<section class="main">
+<section class="main-home">
   <div class="inner">
     <div class="half visual">
       <div class="wrapper" id="teams">
@@ -194,7 +194,7 @@
     </div>
   </div>
 </section>
-<section class="main">
+<section class="main-home">
   <div class="inner">
     <div class="half text">
       <div class="wrapper">
@@ -229,7 +229,7 @@
     </div>
   </div>
 </section>
-<section class="main">
+<section class="main-home">
   <div class="inner">
     <div class="discord">
       <span class="subtitle">
