--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,5 +1,5 @@
 <section class="main overview">
-  <div class="intro">
+  <div class="page-intro">
     <div class="titles">
       <h3 class="title">Index</h3>
       <h4 class="subtitle">Overview</h4>
