--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -241,7 +241,7 @@
         <img src="assets/other/huma-meryl-think.webp" alt="Huma and Meryl Sticker">
       </div>
       <span class="subtitle">
-        Join our community on <a href="https://discord.gg/FPtYFtpUF3" class="hyperlink">Discord</a> and just @Kath
+        Join our community on <a href="https://discord.gg/FPtYFtpUF3" class="hyperlink">Discord</a> and just &#64;Kath
       </span>
     </div>
   </div>
