--- a/src/app/glossary/glossary.component.html
+++ b/src/app/glossary/glossary.component.html
@@ -1,7 +1,10 @@
-<ng-template #glossaryEntryTemplate>
-  <div class="term" *ngFor="let term of terms">
-    <h5 class="term-name">{{term.name}}</h5>
-    <span class="term-description">{{term.description}}</span>
+<ng-template #glossaryEntryTemplate let-term>
+  <div class="term">
+    <h5 class="term-name">{{term?.name}}</h5>
+    <!-- we could just use term.description[0].paragraph but this is safer and standardized -->
+    <ng-container *ngFor="let desc of term.description">
+      <span class="term-description">{{desc?.paragraph}}</span>
+    </ng-container>
   </div>
 </ng-template>
 <section class="main">
@@ -13,6 +16,8 @@
     <p class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa maxime sunt in, soluta dolorum aliquam reiciendis vitae omnis dicta doloremque saepe blanditiis, quam similique qui cumque accusamus, voluptate recusandae nulla?</p>
   </div>
   <div class="term-list">
-
+    <ng-container *ngFor="let term of terms">
+      <ng-container *ngTemplateOutlet="glossaryEntryTemplate; context: { $implicit: term }"></ng-container>
+    </ng-container>    
   </div>
 </section>
