--- a/src/app/matrix-card/matrix-card.component.scss
+++ b/src/app/matrix-card/matrix-card.component.scss
@@ -34,7 +34,7 @@
                 font-weight: 600;
             }
 
-            .bc-roles {
+            .bc-resonance {
                 display: flex;
                 flex-direction: row;
                 gap: 4px;
@@ -204,6 +204,7 @@
                 display: flex;
                 flex-direction: column;
                 width: 100%;
+                gap: 2px;
 
                 .name {
                     font-size: 20px;
