--- a/src/app/unit-card/unit-card.component.scss
+++ b/src/app/unit-card/unit-card.component.scss
@@ -152,6 +152,7 @@
                 display: flex;
                 flex-direction: column;
                 width: 100%;
+                gap: 2px;
 
                 .name {
                     font-size: 20px;
